--- a/AJAX.html
+++ b/AJAX.html
@@ -77,12 +77,21 @@
                             aria-describedby="WebsiteHelp"
                           />
                         </div>
-                        <!-- <div class="mb-3 form-check">
-                          <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-                          <label class="form-check-label" for="exampleCheck1">Check me</label>
-                        </div> -->
-                        <button type="submit" class="btn btn-primary btn-sendUser">Send</button>
-                        <button type="submit" class="btn btn-danger btn-addUser disabled" tabindex="-1" role="button" aria-disabled="true">Add User</button>
+                        <div class="alert alert-success alert-dismissible fade show d-none form-succesfully" role="alert">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                          </svg>
+                          <strong>Succesfully!</strong> 
+                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        <div class="alert alert-danger alert-dismissible fade show d-none form-alert" role="alert">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
+                            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5m.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                          </svg>
+                          <strong>Attention!</strong> You didn't not enter a <strong class="whats-no-entered"></strong> 
+                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        <button type="submit" class="btn btn-danger btn-addUser">Add User</button>
                       </form>
                    </div>
                 </div>
