--- a/AJAX.html
+++ b/AJAX.html
@@ -26,80 +26,49 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Add new user</h5>
-                      <form name="addUser">
-                        <div class="mb-3">
-                          <label for="exampleInputName1" class="form-label">Name</label>
-                          <input
-                            type="text"
-                            name="name"
-                            class="form-control"
-                            id="exampleInputname1"
-                            aria-describedby="nameHelp"
-                          />
+                    <form class="row g-3" name="addUser">
+                      <div class="col-md-4">
+                        <label for="validationDefault01" class="form-label">Name</label>
+                        <input type="text" name='name' class="form-control" id="validationDefault01" required>
+                      </div>
+                      <div class="col-md-4">
+                        <label for="validationDefault02" class="form-label">Username</label>
+                        <input type="text" name='username' class="form-control" id="validationDefault02"  required>
+                      </div>
+                      <div class="col-md-4">
+                        <label for="validationDefault03" class="form-label">Email</label>
+                          <input type="email" name='email' class="form-control" id="validationDefault03" required>
+                      </div>
+                      <div class="col-md-6">
+                        <label for="validationDefault04" class="form-label">Phone</label>
+                        <input type="number" name='phone' class="form-control" id="validationDefault04" required>
+                      </div>
+                      <div class="col-md-6">
+                        <label for="validationDefault05" class="form-label">Website</label>
+                        <input type="text" name='website' class="form-control" id="validationDefault05" required>
+                      </div>
+                      <div class="col-12">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                          <label class="form-check-label" for="invalidCheck2">
+                            Agree
+                          </label>
                         </div>
-                        <div class="mb-3">
-                          <label for="exampleInputUserName1" class="form-label">UserName</label>
-                          <input
-                            type="text"
-                            name="username"
-                            class="form-control"
-                            id="exampleInputUserName1"
-                            aria-describedby="UserNameHelp"
-                          />
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleInputEmail1" class="form-label">Email</label>
-                          <input
-                            type="email"
-                            name="email"
-                            class="form-control"
-                            id="exampleInputEmail1"
-                            aria-describedby="emailHelp"
-                          />
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleInputphone1" class="form-label">Phone</label>
-                          <input
-                            type="number"
-                            name="phone"
-                            class="form-control"
-                            id="exampleInputphone1"
-                            aria-describedby="phoneHelp"
-                          />
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleInputWebsite1" class="form-label">Website</label>
-                          <input
-                            type="text"
-                            name="website"
-                            class="form-control"
-                            id="exampleInputWebsite1"
-                            aria-describedby="WebsiteHelp"
-                          />
-                        </div>
-                        <div class="alert alert-success alert-dismissible fade show d-none form-succesfully" role="alert">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                          </svg>
-                          <strong>Succesfully!</strong> 
-                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                        <div class="alert alert-danger alert-dismissible fade show d-none form-alert" role="alert">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
-                            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5m.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
-                          </svg>
-                          <strong>Attention!</strong> You didn't not enter a <strong class="whats-no-entered"></strong> 
-                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                        <button type="submit" class="btn btn-danger btn-addUser">Add User</button>
-                      </form>
+                      </div>
+                      <div class="col-12">
+                        <button class="btn btn-primary" type="submit">Validate form</button>
+                      </div>
+                      <div class="col-12">
+                        <button class="btn btn-primary btn-addUser" type="submit">Add User</button>
+                      </div>
+                    </form>
                    </div>
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
-</div>
-    </div>
     <br />
     <div class="container users-container"></div>
     <br />
@@ -116,5 +85,77 @@
       integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
       crossorigin="anonymous"
     ></script>
+    <script>
+
+    </script>
   </body>
 </html>
+
+
+<!-- <form name="addUser needs-validation" novalidate>
+  <div class="mb-3">
+    <label for="exampleInputName1" class="form-label">Name</label>
+    <input
+      type="text"
+      name="name"
+      class="form-control"
+      id="exampleInputname1"
+      aria-describedby="nameHelp"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputUserName1" class="form-label">UserName</label>
+    <input
+      type="text"
+      name="username"
+      class="form-control"
+      id="exampleInputUserName1"
+      aria-describedby="UserNameHelp"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email</label>
+    <input
+      type="email"
+      name="email"
+      class="form-control"
+      id="exampleInputEmail1"
+      aria-describedby="emailHelp"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputphone1" class="form-label">Phone</label>
+    <input
+      type="number"
+      name="phone"
+      class="form-control"
+      id="exampleInputphone1"
+      aria-describedby="phoneHelp"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputWebsite1" class="form-label">Website</label>
+    <input
+      type="text"
+      name="website"
+      class="form-control"
+      id="exampleInputWebsite1"
+      aria-describedby="WebsiteHelp"
+    />
+  </div>
+  <div class="alert alert-success alert-dismissible fade show d-none form-succesfully" role="alert">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+    </svg>
+    <strong>Succesfully!</strong> 
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+  <div class="alert alert-danger alert-dismissible fade show d-none form-alert" role="alert">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
+      <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5m.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+    </svg>
+    <strong>Attention!</strong> You didn't not enter a <strong class="whats-no-entered"></strong> 
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+  <button type="submit" class="btn btn-danger btn-addUser">Add User</button>
+</form> -->
