form validation bootstrap + event listener on one button

--- a/AJAX.html
+++ b/AJAX.html
@@ -55,9 +55,9 @@
                           </label>
                         </div>
                       </div>
-                      <div class="col-12">
+                      <!-- <div class="col-12">
                         <button class="btn btn-primary" type="submit">Validate form</button>
-                      </div>
+                      </div> -->
                       <div class="col-12">
                         <button class="btn btn-primary btn-addUser" type="submit">Add User</button>
                       </div>
